--- a/dockerserver.yaml
+++ b/dockerserver.yaml
@@ -1,8 +1,10 @@
-- hosts: docker
+---
+- name: "Play for configuring a docker host"
+  hosts: docker
   become: true
   tasks:
     - name: Install docker
-      import_tasks: roles/common/tasks/install_docker.yaml
+      ansible.builtin.import_tasks: roles/common/tasks/install_docker.yaml
 
     - name: Install portainer via docker
-      import_tasks: roles/common/tasks/install_portainer.yaml
+      ansible.builtin.import_tasks: roles/common/tasks/install_portainer.yaml
